--- a/src/CoralScrum/MainBundle/Resources/views/Task/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Task/show.html.twig
@@ -3,7 +3,7 @@
 
 <div class="postItPopup">
     <a class="closePopup closePopupIcon" href=""></a>
-    <h1 class="taskTitle">Task #{{ entity.id }}</h1>
+    <h1 class="taskTitle">Task #{{ entity.displayId }}</h1>
 
     <table class="cleanTab">
         <tbody>
