--- a/src/CoralScrum/MainBundle/Resources/views/Test/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Test/show.html.twig
@@ -11,7 +11,7 @@
         <tbody>
             <tr>
                 <th>ID</th>
-                <td>{{ entity.id }}</td>
+                <td>#{{ entity.displayId }}</td>
             </tr>
             <tr>
                 <th>User Story</th>
