--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/index.html.twig
@@ -26,7 +26,7 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a class="button" href="{{ path('sprint_show', { 'projectId': projectId, 'sprintId': entity.id }) }}">#{{ entity.id }}</a></td>
+                <td><a class="button" href="{{ path('sprint_show', { 'projectId': projectId, 'sprintId': entity.id }) }}">#{{ entity.displayId }}</a></td>
                 <td>
                     <ul class="list">
                     {% for userstory in entity.userstory %}
