--- a/src/CoralScrum/MainBundle/Resources/views/Task/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Task/index.html.twig
@@ -35,7 +35,7 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('task_show', { 'projectId': projectId, 'sprintId': sprintId, 'id': entity.id }) }}">#{{ entity.id }}</a></td>
+                <td><a class="button" href="{{ path('task_show', { 'projectId': projectId, 'sprintId': sprintId, 'id': entity.id }) }}">#{{ entity.displayId }}</a></td>
                 <td><a href="{{ path('userstory_show', { 'projectId': projectId, 'id': entity.userstory.id }) }}">{{ entity.userstory }}</a></td>
                 <td>{{ entity.title }}</td>
                 <td>{{ entity.description }}</td>
