--- a/src/CoralScrum/MainBundle/Resources/views/UserStory/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/UserStory/index.html.twig
@@ -29,7 +29,7 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('userstory_show', { 'projectId': projectId, 'id': entity.id }) }}">#{{ entity.id }}</a></td>
+                <td><a class="button" href="{{ path('userstory_show', { 'projectId': projectId, 'id': entity.id }) }}">#{{ entity.displayId }}</a></td>
                 <td>{{ entity.title }}</td>
                 <td>{{ entity.description }}</td>
                 <td>{{ entity.priority }}</td>
