--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/show.html.twig
@@ -66,7 +66,7 @@
                             {%- endif -%}
                         </span>
                         <span class="taskDuration">Estimed duration: {{ task.duration }}</span>
-                        <span data-id="{{ task.id }}" class="taskId">#{{ task.id }}</span>
+                        <span data-id="{{ task.id }}" class="taskId">#{{ task.displayId }}</span>
                         <span class="taskTitle">{{ task.title }}</span>
                         <span class="taskDesc">{{ task.description|length > 120 ? task.description[:120] ~ '...' : task.description }}</span>
                     </div>
@@ -86,7 +86,7 @@
                             {%- endif -%}
                         </span>
                         <span class="taskDuration">Estimed duration: {{ task.duration }}</span>
-                        <span data-id="{{ task.id }}" class="taskId">#{{ task.id }}</span>
+                        <span data-id="{{ task.id }}" class="taskId">#{{ task.displayId }}</span>
                         <span class="taskTitle">{{ task.title }}</span>
                         <span class="taskDesc">{{ task.description|length > 120 ? task.description[:120] ~ '...' : task.description }}</span>
                     </div>
