--- a/web/css/design.css
+++ b/web/css/design.css
@@ -446,7 +446,8 @@ a.delete {
 	background-image: url(./../img/delete.png)
 }
 a.edit:hover,
-a.delete:hover {
+a.delete:hover,
+a.stats:hover {
 	opacity: 0.7;
 }
 h1 a.edit {
@@ -1196,4 +1197,48 @@ div.collaborators {
 	float:left;
 	margin: 0px 20px;
 	margin-left: 200px;
+}
+
+
+/* SVG Chart
+-------------------------------------------------------------- */
+.chartTitle {
+	margin-top: 30px;
+}
+div.chart {
+	font: 10px sans-serif;
+}
+.axis path, .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
+.line {
+    fill: none;
+    stroke: steelblue;
+    stroke-width: 1.5px;
+}
+.line.second {
+    stroke: red;
+}
+.area {
+    fill: none;
+    opacity: 0.5;
+}
+.dot {
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 1.5px;
+}
+path {
+    stroke-width: 1;
+    fill: none;
+}
+.data1 {
+    stroke: steelblue;
+    stroke-width: 1.5px;
+}
+.chart svg {
+    background-color: #fff;
+    border: 1px solid #ddd;
 }
