--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/stats.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/stats.html.twig
@@ -10,9 +10,15 @@
     <h3><span class="bold">Start Date:</span> {{ entity.startDate|date('d M Y H:i') }}</h3>
     <h3><span class="bold">Duration:</span> {{ entity.duration }} {{ entity.duration < 1 ? 'day' : 'days' }}</h3>
 
-    <h2 class="chartTitle">Burn Down Chart</h2>
     <div class="chart">
+        <h2 class="chartTitle">Burn Down Chart</h2>
     </div>
+
+    {% if userContributions -%}
+    <div class="donut">
+        <h2 class="chartTitle">User Contributions Chart</h2>
+    </div>
+    {%- endif -%}
 
     <a class="button" href="{{ path('sprint', { 'projectId': projectId }) }}">Back to Sprints</a>
 
@@ -33,6 +39,8 @@
         ];
 
 
+/* Burn Down Chart
+--------------------------------------------------------------------------------------------------*/
         var margin = {top: 30, right: 30, bottom: 50, left: 50},
             width = 500 - margin.left - margin.right,
             height = 300 - margin.top - margin.bottom;
@@ -133,5 +141,81 @@
           .attr("d", line(data))
           .attr("class", "data1")
           .attr("transform", "translate(" + margin.left + "," + margin.top + ")")
+
+
+{% if userContributions -%}
+/* Donut Chart
+--------------------------------------------------------------------------------------------------*/
+        var data = [
+            {% for user in userContributions %}
+                {%- if not loop.first -%}
+                    , 
+                {% endif -%}
+                {"label":"{{ user["username"] }}", "value":{{ user["totalDuration"] }} }
+            {% endfor %}
+        ];
+
+            var margin = {top: 30, right: 30, bottom: 30, left: 30},
+                width = 800 - margin.left - margin.right,
+                height = 400 - margin.top - margin.bottom;
+            radius = Math.min(width, height) / 2;
+
+        var color = d3.scale.ordinal()
+            .range([
+                "#88cb9d", "#55b473", "#3b7e50",
+                "#84c8d4", "#4fb0c1", "#377b87",
+                "#7696d4", "#3b69c1", "#294987",
+                "#b28ad4", "#9157c1", "#653d87",
+                "#cb83ae", "#b44d8b", "#7e3661",
+                "#d4767f", "#c13b48", "#872932",
+                "#d6b678", "#c4963e", "#89692b"
+            ]);
+
+        var arc = d3.svg.arc()
+            .outerRadius(radius - 10)
+            .innerRadius(radius - 80);
+
+        var pie = d3.layout.pie()
+            .sort(null)
+            .value(function(d) { return d.value; });
+
+        var svg = d3.select(".donut").append("svg")
+            .attr("width", width)
+            .attr("height", height)
+          .append("g")
+            .attr("transform", "translate(" + height/2 + "," + height/2 + ")");
+
+
+          var g = svg.selectAll(".arc")
+              .data(pie(data))
+            .enter().append("g")
+              .attr("class", "arc");
+
+          g.append("path")
+              .attr("d", arc)
+              .style("fill", function(d, i) { return color(i); });
+
+
+          var legend = svg.selectAll(".legend")
+              .data(pie(data))
+            .enter().append("g")
+              .attr("class", "legend")
+              .attr("transform", function(d, i) { return "translate(" + height/2 + "," + ((i * 15)-((height/2)-10)) + ")"; });
+
+          legend.append("rect")
+              .attr("x", 20)
+              .attr("y", 0)
+              .attr("width", 10)
+              .attr("height", 10)
+              .style("fill", function(d, i) { return color(i); });
+
+          legend.append("text")
+              .attr("x", 34)
+              .attr("y", 5)
+              .attr("dy", ".35em")
+              .text(function(d, i) { return data[i].label; });
+
+{%- endif -%}
+
     </script>
 {% endblock %}
