Prevented making changes to finished sprints, updated css font

--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/index.html.twig
@@ -40,7 +40,9 @@
                 <td>{{ entity.duration }}</td>
                 {% if isGranted -%}
                 <td>
+                    {% if loop.last -%}
                     <a class="edit" href="{{ path('sprint_edit', { 'projectId': projectId, 'sprintId': entity.id }) }}"></a>
+                    {%- endif %}
                     <a class="delete popupDialog" href="{{ path('sprint_delete', { 'projectId': projectId, 'sprintId': entity.id }) }}"></a>
                 </td>
                 {%- endif %}
