Replaced d3.v3.js by d3.v3.min.js

--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/stats.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/stats.html.twig
@@ -27,7 +27,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('js/d3.v3.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/d3.v3.min.js') }}" type="text/javascript"></script>
     <script>
         var data = [
             {%- for val in burnDownData -%}
