--- a/src/CoralScrum/MainBundle/Resources/views/Task/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Task/show.html.twig
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Duration</th>
-                <td>{{ entity.duration }} {{ entity.duration < 1 ? 'day' : 'days' }}</td>
+                <td>{{ entity.duration }} {{ entity.duration == 1 ? 'day' : 'days' }}</td>
             </tr>
             <tr>
                 <th>State</th>
