--- a/web/css/design.css
+++ b/web/css/design.css
@@ -245,7 +245,7 @@ div.error {
 
 .popupContent {
 	opacity: 0.1;
-	position: absolute;
+	position: fixed !important;
 	z-index: 100;
 	width: 100%;
 	height: 100%;
