--- a/src/CoralScrum/MainBundle/Resources/views/Project/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Project/show.html.twig
@@ -13,9 +13,6 @@
     </h1>
 
     <div class="projectDetails">
-        <a class="button" href="{{ path('project') }}">Back to Projects</a>
-
-
         <table class="cleanTab">
             <tbody>
                 <tr>
@@ -34,6 +31,8 @@
                 </tr>
             </tbody>
         </table>
+
+        <a class="button" style="margin:10px;" href="{{ path('project') }}">Back to Projects</a>
     </div>
 
     <div class="collaborators">
