--- a/src/CoralScrum/MainBundle/Resources/views/UserStory/edit.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/UserStory/edit.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block container -%}
-    <h1>UserStory edit</h1>
+    <h1>Edit User Story</h1>
 
     {{ form(edit_form) }}
     
