--- a/src/CoralScrum/MainBundle/Resources/views/UserStory/new.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/UserStory/new.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block container -%}
-    <h1>UserStory creation</h1>
+    <h1>Add a new User Story</h1>
 
     {{ form(form) }}
 
