--- a/src/CoralScrum/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/CoralScrum/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -1,5 +1,7 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
+<h1>Change Password</h1>
+
 <form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
     {{ form_widget(form) }}
     <div>
