--- a/src/CoralScrum/MainBundle/Resources/views/Project/edit.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Project/edit.html.twig
@@ -1,7 +1,11 @@
 {% extends "CoralScrumMainBundle::index.html.twig" %}
 
+{% block menu %}
+    <div id="headband"></div>
+{% endblock %}
+
 {% block container -%}
-    <h1>Project edit</h1>
+    <h1>Edit Project</h1>
 
     {{ form(edit_form) }}
 
