--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/new.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/new.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block container -%}
-    <h1>Sprint creation</h1>
+    <h1>Add a new Sprint</h1>
 
     {{ form_start(form) }}
 
