--- a/src/CoralScrum/MainBundle/Resources/views/Task/new.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Task/new.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block container -%}
-    <h1>Task creation</h1>
+    <h1>Add a new Task</h1>
 
     
     {{ form_start(form) }}
