--- a/src/CoralScrum/MainBundle/Resources/views/Test/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Test/show.html.twig
@@ -60,11 +60,18 @@
         </tbody>
     </table>
 
-    <a class="button" href="{{ path('test', { 'projectId': projectId }) }}">Back to Tests</a>
-
     {% if isGranted -%}
-    <a class="button" href="{{ path('test_edit', { 'projectId': projectId, 'id': entity.id }) }}">Edit</a>
-    {{ form(delete_form) }}
+    <ul class="actionButtons" style="margin-left:40px;">
+        <li>
+            <a class="blueButton" href="{{ path('test_edit', { 'projectId': projectId, 'id': entity.id }) }}">Edit</a>
+        </li>
+        <li>
+            {{ form_start(delete_form) }}
+            {{ form_widget(delete_form.submit, { 'attr': { 'class': 'redButton' } }) }}
+            {{ form_end(delete_form) }}
+        </li>
+    </ul>
     {%- endif %}
 
+    <a class="button" href="{{ path('test', { 'projectId': projectId }) }}">Back to Tests</a>
 {% endblock %}
