--- a/src/CoralScrum/MainBundle/Resources/views/UserProject/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/UserProject/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block container -%}
-    <h1>Collaborators list</h1>
+    <h1>Collaborators</h1>
 
     <a class="button" href="{{ path('collaborator_new', { 'projectId': projectId }) }}">Add a new collaborator</a>
 
