--- a/src/CoralScrum/UserBundle/Resources/views/layout.html.twig
+++ b/src/CoralScrum/UserBundle/Resources/views/layout.html.twig
@@ -1,18 +1,10 @@
 {% extends "CoralScrumMainBundle::index.html.twig" %}
 
+{% block menu %}
+    <div id="headband"></div>
+{% endblock %}
 
 {% block container %}
-
-        <div class="message">
-            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-                <a href="{{ path('fos_user_security_logout') }}">
-                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-                </a>
-            {% else %}
-                <!--<a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>-->
-            {% endif %}
-        </div>
 
         {% for type, messages in app.session.flashbag.all() %}
             {% for message in messages %}
@@ -25,9 +17,9 @@
         <div>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
             {% else %}
+            {% endif %}
                 {% block fos_user_content %}
                 {% endblock fos_user_content %}
-            {% endif %}
         </div>
 
 {% endblock %}
