Updated home page

--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/stats.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/stats.html.twig
@@ -11,7 +11,7 @@
     <h3><span class="bold">Duration:</span> {{ entity.duration }} {{ entity.duration == 1 ? 'day' : 'days' }}</h3>
 
     <div class="chart">
-        <h2 class="chartTitle">Burn Down Chart</h2>
+        <h2 class="chartTitle">Burndown Chart</h2>
     </div>
 
     {% if userContributionsTaskInProgress -%}
@@ -45,7 +45,7 @@
         ];
 
 
-/* Burn Down Chart
+/* Burndown Chart
 --------------------------------------------------------------------------------------------------*/
         var margin = {top: 30, right: 30, bottom: 50, left: 50},
             width = 500 - margin.left - margin.right,
