--- a/src/CoralScrum/MainBundle/Resources/views/home.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/home.html.twig
@@ -70,7 +70,7 @@
                     </li>
                     <li>
                         <span class="step">Step 8</span>
-                        <p>Under development...</p>
+                        <p>View sprint stats, burndown charts, user contributions charts</p>
                     </li>
                 </ul>
                 <div class="clear"></div>
